<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Psam Card</string>
	<string name="about_msg">This program is the sample application provided
		with project android-serialport-api. The project is free and open
		source.\n\nMore information and bug report
		on:\nhttp://code.google.com/p/android-serialport-api/\n\n- Cédric
	</string>
	<string name="error_configuration">Please configure your serial port first.</string>
	<string name="error_security">You do not have read/write permission to the serial
		port.</string>
	<string name="error_unknown">The serial port can not be opened for an unknown
		reason.</string>
	<string name="set_apn">AT+CGDCONT=1, \"IPV4V6\", \"internet.lguplus.co.kr\", \"0.0.0.0\", 0, 0</string>
	<string name="get_apn">AT+CGDCONT?</string>
	<string name="serial_port">Setting Serial Port</string>
	<string name="serial">serial</string>
	
	<string name="devices_def">/dev/ttyHSL0</string>
	<string name="baud_rate_def">38400</string>
	<string name="parity_check_def">None</string>
	<string name="stop_bits_def">1</string>
	<string name="data_bits_def">8</string>
	<string name="flow_control_def">None</string>
	
</resources>
